# sporotrack

./: .gitignore  README.md  main.py  pyproject.toml  setup.bat  setup.sh
config/: settings.yaml
utils/: utils.py
