[project]
name = "sporotrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "filterpy>=1.4.5",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "scipy>=1.15.2",
    "tifffile>=2025.3.30",
    "tqdm>=4.67.1",
]
